--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "chat": "https://sulu.io/services-and-support#chat"
     },
     "require": {
-        "php": "^7.2 || ^8.0",
+        "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "dantleech/phpcr-migrations-bundle": "^1.2",
@@ -35,27 +35,33 @@
         "handcraftedinthealps/zendsearch": "^2.1",
         "jackalope/jackalope-doctrine-dbal": "^1.7",
         "sulu/sulu": "~2.5",
-        "symfony/config": "^5.4",
-        "symfony/dotenv": "^5.4",
+        "symfony/config": "^6.1",
+        "symfony/dotenv": "^6.1",
         "symfony/flex": "^1.17 || ^2.0",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/monolog-bridge": "^5.4",
+        "symfony/framework-bundle": "^6.1",
+        "symfony/mailer": "^6.1",
+        "symfony/monolog-bridge": "^6.1",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/runtime": "^5.4",
-        "symfony/security-bundle": "^5.4",
-        "symfony/swiftmailer-bundle": "^3.5",
-        "symfony/twig-bundle": "^5.4"
+        "symfony/runtime": "^6.1",
+        "symfony/security-bundle": "^6.1",
+        "symfony/twig-bundle": "^6.1"
     },
     "require-dev": {
         "phpcr/phpcr-shell": "^1.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^8.5 || ^9.5",
-        "symfony/browser-kit": "^5.4",
-        "symfony/css-selector": "^5.4",
-        "symfony/debug-bundle": "^5.4",
-        "symfony/error-handler": "^5.4",
-        "symfony/phpunit-bridge": "^5.4",
+        "rector/rector": "^0.13.9",
+        "sulu/sulu-rector": "^0.1.1",
+        "symfony/browser-kit": "^6.1",
+        "symfony/css-selector": "^6.1",
+        "symfony/debug-bundle": "^6.1",
+        "symfony/error-handler": "^6.1",
+        "symfony/phpunit-bridge": "^6.1",
         "symfony/thanks": "^1.2",
-        "symfony/web-profiler-bundle": "^5.4"
+        "symfony/web-profiler-bundle": "^6.1"
     },
     "autoload": {
         "psr-4": {
@@ -104,7 +110,8 @@
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
             "symfony/runtime": true,
-            "symfony/thanks": true
+            "symfony/thanks": true,
+            "phpstan/extension-installer": true
         },
         "optimize-autoloader": true,
         "sort-packages": true
