--- a/config/packages/sulu_admin.yaml
+++ b/config/packages/sulu_admin.yaml
@@ -6,6 +6,51 @@ sulu_admin:
     lists:
         directories:
             - "%kernel.project_dir%/config/lists"
+    resources:
+        events:
+            routes:
+                list: app.get_events
+                detail: app.get_event
+
+    field_type_options:
+        selection:
+            event_selection:
+                default_type: 'list_overlay'
+                resource_key: 'events'
+                view:
+                    name: 'app.event_edit_form'
+                    result_to_view:
+                        id: 'id'
+                types:
+                    list_overlay:
+                        adapter: 'table'
+                        list_key: 'events'
+                        display_properties:
+                            - 'name'
+                        icon: 'su-calendar'
+                        label: 'app.events'
+                        overlay_title: 'app.events'
+        single_selection:
+            single_event_selection:
+                default_type: 'list_overlay'
+                resource_key: 'events'
+                view:
+                    name: 'app.event_edit_form'
+                    result_to_view:
+                        id: 'id'
+                types:
+                    list_overlay:
+                        adapter: 'table'
+                        list_key: 'events'
+                        display_properties:
+                            - 'name'
+                        icon: 'su-calendar'
+                        empty_text: 'app.location.no_selections'
+                        overlay_title: 'app.locations'
+                    auto_complete:
+                        display_property: 'name'
+                        search_properties:
+                            - 'name'
 sulu_core:
     locales:
         en: English
