--- a/config/routes_admin.yaml
+++ b/config/routes_admin.yaml
@@ -2,3 +2,9 @@
 controllers:
   resource: ../src/Controller/Admin/
   type: attribute
+
+app_events_api:
+  type: rest
+  prefix: /admin/api
+  resource: App\Controller\Admin\EventController
+  name_prefix: app.
